--- a/GRUP D/MATERI JAVASCRIPT 2/index.html
+++ b/GRUP D/MATERI JAVASCRIPT 2/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Praktikum JS 2</title>
+    <title>Praktikum JS 2 D</title>
   </head>
   <body>
     <h1 id="makanan">Contoh DOM ID</h1>
